// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Generate player's highlights JSON file > CS2 1`] = `
"[
  {
    "actions": [
      {
        "cmd": "tv_listen_voice_indices -1",
        "tick": 64
      },
      {
        "cmd": "tv_listen_voice_indices_h -1",
        "tick": 64
      },
      {
        "cmd": "demo_gototick 872",
        "tick": 64
      },
      {
        "cmd": "spec_player 4",
        "tick": 872
      },
      {
        "cmd": "spec_mode 1",
        "tick": 872
      },
      {
        "cmd": "spec_player 4",
        "tick": 1200
      },
      {
        "cmd": "spec_mode 1",
        "tick": 1200
      },
      {
        "cmd": "spec_player 4",
        "tick": 1700
      },
      {
        "cmd": "spec_mode 1",
        "tick": 1700
      },
      {
        "cmd": "demo_gototick 4872",
        "tick": 2256
      },
      {
        "cmd": "spec_player 4",
        "tick": 4872
      },
      {
        "cmd": "spec_mode 1",
        "tick": 4872
      },
      {
        "cmd": "disconnect",
        "tick": 5256
      }
    ]
  }
]"
`;

exports[`Generate player's highlights JSON file > CSGO 1`] = `
"[
  {
    "actions": [
      {
        "cmd": "voice_enable 1",
        "tick": 64
      },
      {
        "cmd": "demo_gototick 872",
        "tick": 64
      },
      {
        "cmd": "spec_lock_to_accountid fakePlayerSteamId",
        "tick": 872
      },
      {
        "cmd": "spec_player_by_accountid fakePlayerSteamId",
        "tick": 872
      },
      {
        "cmd": "spec_lock_to_accountid fakePlayerSteamId",
        "tick": 1200
      },
      {
        "cmd": "spec_player_by_accountid fakePlayerSteamId",
        "tick": 1200
      },
      {
        "cmd": "spec_lock_to_accountid fakePlayerSteamId",
        "tick": 1700
      },
      {
        "cmd": "spec_player_by_accountid fakePlayerSteamId",
        "tick": 1700
      },
      {
        "cmd": "demo_gototick 4872",
        "tick": 2256
      },
      {
        "cmd": "spec_lock_to_accountid fakePlayerSteamId",
        "tick": 4872
      },
      {
        "cmd": "spec_player_by_accountid fakePlayerSteamId",
        "tick": 4872
      },
      {
        "cmd": "disconnect",
        "tick": 5256
      }
    ]
  }
]"
`;
